--- a/src/scripts/views/index/index.scss
+++ b/src/scripts/views/index/index.scss
@@ -17,3 +17,33 @@
     overflow: hidden;
   }
 }
+
+.indexTab {
+  position: fixed;
+  right: 0;
+  left: 0;
+  top: 80px;
+  z-index: 9999;
+}
+.description {
+  height: 116px;
+  line-height: 40px;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
+}
+.backtop {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  line-height: 100px;
+  text-align: center;
+  font-size: 30px;
+  color: #fff;
+  position: fixed;
+  right: 30px;
+  bottom: 120px;
+  background-color: rgba(200, 200, 200, 0.8);
+  z-index: 99999;
+}
