--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,7 @@
 @import "animate.css";
 @import "fonts/iconfont.css";
 @import "antd-mobile.css";
+@import "video-react.css";
 
 $base_font: 20px;
 $base_color: #333;
